# duckplus

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LEGACY.md  LEGACY_REVIEW.md  MANIFEST.in  README.md  TODO.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: Makefile  api_reference.md  community_extension_targets.md  conf.py  contributing.md  demo_gallery.rst  duckdb_function_module_audit.md  extensions_audit.md  function_namespace_generator_retirement.md  index.md  io.md  join_interface_proposal.md  language_server_demo.md  pi_demo.md  publishing.md  pypi-assessment.md  registry_inventory.md  relation.md  repository-map.md  requirements.txt  sales_pipeline_demo.md  schema.md  ty_language_server.md  typed_api.md
duckplus/: __init__.py  _duckdb_api_map.py  duckcon.py  relation.py
scripts/: audit_extensions.py  demo_language_server.py  generate_function_namespaces.py  generate_repo_toc.py
spec/: __init__.py  boolean_spec.py  numeric_spec.py  string_spec.py  temporal_spec.py
tests/: _project_metadata.py  function_catalog_expectations.py  test_cli.py  test_cli_integration.py  test_connect.py  test_connection_readers.py  test_core.py  test_docs_structure.py  test_duck_api_wrappers.py  test_duckcon.py  test_duckdb_contracts.py  test_duckdb_function_coverage.py  test_examples.py  test_examples_pi_demo.py  test_examples_sales_pipeline.py  test_examples_traceability_pipeline.py  test_gen_duck_functions.py  test_html.py  test_io_appenders.py  test_io_helpers.py  test_relation.py  test_relation_append.py  test_relation_append_simulation.py  test_relation_integration.py  test_relation_metrics.py  test_table_insert.py  test_table_integration.py  test_typed_ducktype_module.py  test_typed_expression.py  test_typed_function_namespace.py  test_typed_functions.py  test_typed_protocols.py  typecheck_cases.py
tools/: gen_duck_functions.py  gen_function_contract_tests.py  report_parity.py
(+195 files in other folders)
