[project]
name = "duckplus"                     # PyPI-safe name; brand "Duck+"
version = "0.0.1"
description = "Pythonic, typed wrappers for DuckDB relations and tables (Duck+)."
readme = "README.md"
license = "MIT"
authors = [{ name = "Isaac Moore" }]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "pyarrow>=16.1",
]

# Optional extras (keep minimal; ODBC removed — loaded at runtime if needed)
[project.optional-dependencies]
cli = []
html = []

[project.scripts]
duckplus = "duckplus.cli:main"

[tool.setuptools.package-data]
duckplus = ["py.typed"]

[build-system]
requires = ["uv>=0.2", "setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3",
    "mypy>=1.11",
    "types-setuptools",
]

[tool.pytest.ini_options]
addopts = "-q"
python_files = "test_*.py"
markers = [
    "mutable_with_approval: Exploratory integration coverage that maintainers may revise as APIs evolve",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
