[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "duckplus"
version = "0.0.0"
description = "Typed expression helpers for DuckDB"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "pytest>=7.4.0",
    "python-lsp-server>=1.10.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
markers = [
    "integration: marks integration tests that require external services",
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
]
